Closed Bug 333301 Opened 18 years ago Closed 18 years ago

[@ nsViewManager::RemoveChild] if child is null

Categories

(Core :: Web Painting, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: asqueella)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(1 file)

found by coverity

since this is an nsimethod, imo this code should have NS_ENSURE_ARG_POINTER(child) instead of NS_PRECONDITION, deref, null check after crashing in deref.
Status: UNCONFIRMED → NEW
Ever confirmed: true
As timeless suggested.
Assignee: roc → asqueella
Status: NEW → ASSIGNED
Attachment #217754 - Flags: superreview?(roc)
Attachment #217754 - Flags: review?(roc)
Attachment #217754 - Flags: superreview?(roc)
Attachment #217754 - Flags: superreview+
Attachment #217754 - Flags: review?(roc)
Attachment #217754 - Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: