Bug 333301 - [@ nsViewManager::RemoveChild] if child is null. Patch by Nickolay Ponomarev, r+sr=roc